# lightning-link

./: .gitignore  CMakeLists.txt  README.md  final_report.docx  lightning_link_project_specification_final.md  ~$nal_report.docx
client/: bot.cpp  bot.hpp  client.cpp  client.hpp  hud.cpp  hud.hpp  input.cpp  input.hpp  interpolation.cpp  interpolation.hpp  main.cpp  network_receiver.cpp  network_receiver.hpp  prediction.cpp  prediction.hpp  renderer.cpp  renderer.hpp  snapshot_queue.hpp  tcp_baseline_client.cpp
common/: constants.hpp  lagged_socket.cpp  lagged_socket.hpp  logging.cpp  logging.hpp  math_utils.hpp  net_compat.cpp  net_compat.hpp  protocol.hpp  selftest.cpp  serialization.cpp  serialization.hpp  types.hpp
docs/: architecture.md  deviations.md  report_outline.md  results_interpretation.md
experiments/A_clean_baseline_rep0/: client_A_clean_baseline_rep0_p1_inputs_1776429797468.csv  client_A_clean_baseline_rep0_p1_periodic_1776429797467.csv  client_A_clean_baseline_rep0_p2_inputs_1776429797513.csv  client_A_clean_baseline_rep0_p2_periodic_1776429797513.csv  server.stdout  server_A_clean_baseline_rep0_1776429796913.csv
experiments/A_clean_baseline_rep1/: client_A_clean_baseline_rep1_p1_inputs_1776429859496.csv  client_A_clean_baseline_rep1_p1_periodic_1776429859496.csv  client_A_clean_baseline_rep1_p2_inputs_1776429859536.csv  client_A_clean_baseline_rep1_p2_periodic_1776429859536.csv  server.stdout  server_A_clean_baseline_rep1_1776429858926.csv
experiments/A_clean_baseline_rep2/: client_1.stdout  client_A_clean_baseline_rep2_p1_inputs_1776429921534.csv  client_A_clean_baseline_rep2_p1_periodic_1776429921534.csv  client_A_clean_baseline_rep2_p2_inputs_1776429921573.csv  client_A_clean_baseline_rep2_p2_periodic_1776429921573.csv  server.stdout  server_A_clean_baseline_rep2_1776429920965.csv
results/: per_run.csv  summary.csv
server/: main.cpp  server.cpp  server.hpp  session_manager.cpp  session_manager.hpp  tcp_baseline.cpp  udp_snapshot_broadcaster.cpp  udp_snapshot_broadcaster.hpp  world_state.cpp  world_state.hpp
tools/: analyze.py  run_all.sh  run_experiments.sh  run_isolation.sh  run_loss_sweep.sh  run_scale_sweep.sh
(+249 files in other folders)
